# quicklink

./: CHANGELOG.md  CMakeLists.txt  Kconfig  LICENSE  README.md  dummy.c  idf_component.yml  sdkconfig.defaults.demo
.github/workflows/: cmake-multi-platform.yml
examples/basic/: CMakeLists.txt  idf_component.yml  main.c
include/: quicklink.h
